[project]
name = "chatapp"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "huggingface-hub>=0.27.0",
    "optimum>=1.23.3",
    "safetensors>=0.5.0",
    "tokenizers>=0.21.0",
    "transformers>=4.47.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "uv>=0.5.14",
]
